[gd_scene load_steps=2 format=3 uid="uid://dp7n6x23g8dl4"]

[ext_resource type="Script" uid="uid://omrt0qn81s7s" path="res://controls.gd" id="1_controls"]

[node name="Controls" type="CanvasLayer"]
layer = 100
script = ExtResource("1_controls")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Controls"
horizontal_alignment = 1

[node name="ControlList" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "WASD - Move
Space - Jump
Left Shift/C/F - Slide 
Q/E - Spin
Tab - Toggle Camera
Escape - Toggle Menu / Show Cursor"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
